# element-protocol

./: .appveyor.yml  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: FindSodium.cmake
include/: aes.h  base64.h  buffer.h  crypto.h  dyad.h  keypairinterface.h  log.h  msginterface.h  msgprotocol.h  net.h  netbase.h  netinterface.h  p2p.h  protocol.h  protocolbase.h  queue.h  task.h  util.h  version.h
src/: CMakeLists.txt  aes.c  base64.c  buffer.c  crypto.c  keypairinterface.c  log.c  main.c  msginterface.c  msgprotocol.c  net.c  netbase.c  netinterface.c  p2p.c  protocol.c  queue.c  task.c  util.c
tests/: CMakeLists.txt  test_queue.c  tests_buffer.c  tests_tasks.c
